# MLP_test

./: .gitignore  le_net.py  main.py  multilayer.py  pyproject.toml  self-organising-map.py  single_layer.py
data/single/0/: 1.txt  2.txt  3.txt  4.txt  5.txt
data/single/1/: 2.txt  3.txt  4.txt  6.txt
model/: lenet5.pth
