[tool.poetry]
name = "mlp-test"
version = "0.1.0"
description = ""
authors = ["Hongpei Zheng <zhenghongpei@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
torch = "^2.1.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
